@@ -2,47 +2,51 @@ package cn.edu.xjtu.sysy.mir.pass.transform;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
-import cn.edu.xjtu.sysy.Pipeline;
-import cn.edu.xjtu.sysy.mir.node.BasicBlock;
-import cn.edu.xjtu.sysy.mir.node.Function;
-import cn.edu.xjtu.sysy.mir.node.ImmediateValue;
-import cn.edu.xjtu.sysy.mir.node.Instruction;
+import cn.edu.xjtu.sysy.mir.node.*;
 import cn.edu.xjtu.sysy.mir.node.Instruction.Dummy;
-import cn.edu.xjtu.sysy.mir.node.LIRInstrHelper;
-import cn.edu.xjtu.sysy.mir.node.Module;
+import cn.edu.xjtu.sysy.mir.pass.ModulePass;
 import cn.edu.xjtu.sysy.riscv.Register;
 import cn.edu.xjtu.sysy.riscv.StackPosition;
 import cn.edu.xjtu.sysy.symbol.Types;
 
-public class EnterLIR extends AbstractTransform {
-    LIRInstrHelper helper = new LIRInstrHelper();
-    public EnterLIR(Pipeline<Module> pipeline) {
-        super(pipeline);
-    }
+import static cn.edu.xjtu.sysy.riscv.ValueUtils.calleeSaved;
 
-    /** 插入epilogue块和callee saved */
+@SuppressWarnings("unchecked")
+public class EnterLIR extends ModulePass<Void> {
+    private final LIRInstrHelper helper = new LIRInstrHelper();
+    private StackState stackState;
+
+    // 插入epilogue块和callee saved
     @Override
     public void visit(Function function) {
-        // 插入callee saved
-        helper.changeBlock(function.entry);
-        var dummies = Register.calleeSaved().map(reg -> {
+        stackState = function.stackState;
+        var entry = function.entry;
+        helper.changeBlock(entry);
+
+        // 给 entry 中的 alloca 分配空间
+        for (var inst : entry.instructions) {
+            if (inst instanceof Instruction.Alloca alloca)
+                alloca.position = new StackPosition(stackState.allocate(alloca.type));
+        }
+
+        // 插入 callee saved
+        var dummies = calleeSaved.stream().map(reg -> {
             var dummy = helper.dummyDef(reg.getType());
-            dummy.constraint = reg;
+            dummy.position = reg;
             return dummy;
         }).toArray(Dummy[]::new);
-        function.entry.instructions.addFirst(helper.dummyDef(dummies));
+        for (var dummy : dummies) function.entry.instructions.addFirst(dummy);
 
+        // 插入 epilogue
         var epilogue = function.epilogue;
         function.addBlock(epilogue);
         helper.changeBlock(epilogue);
         if (!function.funcType.returnType.equals(Types.Void)) {
             var arg = epilogue.addBlockArgument(function.funcType.returnType);
             epilogue.terminator = helper.ret(arg);
-        } else {
-            epilogue.terminator = helper.ret();
-        }
+        } else epilogue.terminator = helper.ret();
+
         var dummyUse = helper.dummyUse(dummies);
         epilogue.addInstruction(dummyUse);
         function.blocks.forEach(this::visit);
@@ -77,22 +81,21 @@ public class EnterLIR extends AbstractTransform {
     
     public void insertCallerSaved(Instruction.AbstractCall call) {
         // 插入caller saved
-        var dummies = Register.calleeSaved().map(reg -> {
+        var dummies = calleeSaved.stream().map(reg -> {
             var dummy = helper.dummyDef(reg.getType());
-            dummy.constraint = reg;
+            dummy.position = reg;
             return dummy;
         }).toArray(Dummy[]::new);
-        call.insertBefore(helper.dummyDef(dummies));
+        for (var dummy : dummies) call.insertBefore(dummy);
 
         var floatArgs = Arrays.stream(call.args).filter(
             arg -> arg.value.type.equals(Types.Float)
-        ).collect(Collectors.toList());
+        ).toList();
 
         var intArgs = Arrays.stream(call.args).filter(
             arg -> !arg.value.type.equals(Types.Float)
-        ).collect(Collectors.toList());
+        ).toList();
 
-        int offset = 0;
         for (int i = 0; i < floatArgs.size(); i++) {
             var arg = floatArgs.get(i);
             var fcpy = helper.fcpy(arg.value);
@@ -100,11 +103,10 @@ public class EnterLIR extends AbstractTransform {
             arg.replaceValue(fcpy);
             var reg = Register.FA(i);
             if (reg != null) {
-                fcpy.constraint = reg;
+                fcpy.position = reg;
                 continue;
             }
-            fcpy.constraint = new StackPosition(offset);
-            offset += 4;
+            fcpy.position = new StackPosition(stackState.allocate(Types.Float));
         }
 
         for (int i = 0; i < intArgs.size(); i++) {
@@ -113,29 +115,24 @@ public class EnterLIR extends AbstractTransform {
                 var icpy = helper.icpy(arg.value);
                 call.insertBefore(icpy);
                 arg.replaceValue(icpy);
-                var reg = Register.A(i);
-                icpy.constraint = reg;
+                icpy.position = Register.A(i);
                 continue;
             }
-            if (arg.value.type.equals(Types.Int)) {
+            if (arg.value.type == Types.Int) {
                 var icpy = helper.icpy(arg.value);
                 call.insertBefore(icpy);
                 arg.replaceValue(icpy);
-                icpy.constraint = new StackPosition(offset);
-                offset += 4;
+                icpy.position = new StackPosition(stackState.allocate(Types.Int));
             }
         }
 
-        offset = offset / 8 * 8 + 8;
-
         for (int i = 8; i < intArgs.size(); i++) {
             var arg = intArgs.get(i);
-            if (!arg.value.type.equals(Types.Int)) {
+            if (arg.value.type != Types.Int) {
                 var icpy = helper.icpy(arg.value);
                 call.insertBefore(icpy);
                 arg.replaceValue(icpy);
-                icpy.constraint = new StackPosition(offset);
-                offset += 8;
+                icpy.position = new StackPosition(stackState.allocate(arg.value.type));
             }
         }
 
